LPS-77699 Update Translations

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -1771,7 +1771,7 @@ article-comments-enabled=已啟用文章評論
 article-display-style=文章顯示樣式
 article-id=文章ID
 article-increment-priority-enabled=啟用文章遞增優先等級
-article-is-not-displayable=Article is not displayable. (Automatic Copy)
+article-is-not-displayable=文章不可視。
 article-or-folder=文章或資料夾
 article-updated-email=更新電子郵件的文章
 article-version=文章版本
