--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -7011,7 +7011,7 @@ hin=Hin
 hint-for-narrow-portlet=n
 hint-for-wide-portlet=W
 historical-charts=Diagrammes historiques
-history=Histoire
+history=Historique
 history-count=Nombre d'éléments de l'historique
 history-count-help=Ceci détermine le nombre de mots de passe à garder dans l'historique.
 hmm-looks-like-this-item-doesnt-have-a-preview-we-can-show-you=Mmmh... cet élément ne semble pas avoir d'aperçu à vous présenter.
